--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -15,6 +15,7 @@
         android:layout_marginEnd="35dp"
         android:layout_marginBottom="91dp"
         android:text="jamais vu"
+        android:importantForAccessibility="yes"
         app:layout_constraintBottom_toTopOf="@+id/btMatch"
         app:layout_constraintEnd_toStartOf="@+id/btJaime"
         app:layout_constraintHorizontal_bias="0.333"
@@ -30,6 +31,9 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="19dp"
         android:contentDescription="affiche_film"
+        android:nextFocusLeft="@id/btJaimePas"
+        android:nextFocusRight="@id/btJaime"
+        android:importantForAccessibility="yes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -43,6 +47,7 @@
         android:layout_marginTop="204dp"
         android:onClick="goToMessage"
         android:text="Messages"
+        android:importantForAccessibility="yes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewFilm"
@@ -56,20 +61,24 @@
         android:layout_marginTop="204dp"
         android:layout_marginEnd="35dp"
         android:text="Match"
+        android:nextFocusRight="@id/btStats"
+        android:nextFocusLeft="@id/btMessages"
+        android:importantForAccessibility="yes"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button12"
+        app:layout_constraintEnd_toStartOf="@+id/btStats"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toEndOf="@+id/btMessages"
         app:layout_constraintTop_toBottomOf="@+id/imageViewFilm"
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/button12"
+        android:id="@+id/btStats"
         android:layout_width="108dp"
         android:layout_height="61dp"
         android:layout_marginTop="204dp"
         android:layout_marginEnd="16dp"
         android:text="Stats"
+        android:importantForAccessibility="yes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewFilm"
@@ -84,6 +93,9 @@
         android:layout_marginBottom="91dp"
         android:onClick="dontLikeMovie"
         android:text="j'aime pas"
+        android:nextFocusRight="@id/btJamaisVu"
+        android:nextFocusDown="@id/btMessages"
+        android:importantForAccessibility="yes"
         app:layout_constraintBottom_toTopOf="@+id/btMessages"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewFilm"
@@ -98,7 +110,10 @@
         android:layout_marginBottom="89dp"
         android:onClick="likeMovie"
         android:text="j'aime"
-        app:layout_constraintBottom_toTopOf="@+id/button12"
+        android:nextFocusLeft="@id/btJamaisVu"
+        android:nextFocusDown="@id/btStats"
+        android:importantForAccessibility="yes"
+        app:layout_constraintBottom_toTopOf="@+id/btStats"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewFilm"
         app:layout_constraintVertical_bias="0.0" />
