--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,38 +22,42 @@
 
     <EditText
         android:id="@+id/userLogin"
-        android:layout_width="332dp"
+        android:layout_width="289dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="82dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="250dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
         android:contentDescription="Saisissez votre identifiant Movinder"
         android:drawablePadding="5dp"
+        android:focusable="true"
         android:gravity="start"
-        android:hint="Login"
+        android:importantForAccessibility="yes"
         android:inputType="text"
+        android:nextFocusDown="@id/userPassword"
         android:textCursorDrawable="@null" />
 
     <EditText
         android:id="@+id/userPassword"
-        android:layout_width="331dp"
+        android:layout_width="244dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="128dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="320dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
         android:contentDescription="Saisissez votre mot de passe Movinder"
+        android:importantForAccessibility="yes"
         android:drawablePadding="5dp"
         android:gravity="start"
-        android:hint="Mot de passe"
         android:inputType="textPassword"
+        android:nextFocusUp="@id/userLogin"
+        android:nextFocusDown="@id/login"
         android:textCursorDrawable="@null" />
 
     <ImageView
@@ -79,6 +83,9 @@
         android:layout_marginRight="40dp"
         android:contentDescription="Se connecter à l'application Movinder"
         android:gravity="center"
+        android:importantForAccessibility="yes"
+        android:nextFocusUp="@id/userPassword"
+        android:nextFocusDown="@id/register1"
         android:onClick="tryToLog"
         android:text="SE CONNECTER"
         android:textAllCaps="false"
@@ -98,11 +105,42 @@
         android:layout_marginEnd="85dp"
         android:layout_marginBottom="103dp"
         android:contentDescription="Si vous n'avez pas de compte, appuyez sur ce lien pour en créer un"
-        android:focusable="true"
+        android:nextFocusUp="@id/login"
         android:fontFamily="sans-serif"
+        android:importantForAccessibility="yes"
         android:onClick="goToRegister"
         android:text="Vous n'avez pas de compte ? Créez-le"
         android:textColor="#7f00ff"
         android:textSize="12dp" />
+
+    <TextView
+        android:id="@+id/lbLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="264dp"
+        android:layout_marginEnd="315dp"
+        android:layout_marginBottom="448dp"
+        android:labelFor="@id/userLogin"
+        android:text="Login :" />
+
+    <TextView
+        android:id="@+id/lbMdp"
+        android:layout_width="183dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="333dp"
+        android:layout_marginEnd="193dp"
+        android:layout_marginBottom="379dp"
+        android:labelFor="@id/userPassword"
+        android:text="Mot de passe :" />
 
 </RelativeLayout>
